src/test/ui/suggestions/use-type-argument-instead-of-assoc-type.stderr
error[E0107]: wrong number of type arguments: expected 2, found 4
  --> $DIR/use-type-argument-instead-of-assoc-type.rs:6:42
   |
LL |  pub struct Foo { i: Box<T<usize, usize, usize, usize, B=usize>> }
   |                                          ^^^^^  ^^^^^ unexpected type argument
   |                                          |
   |                                          unexpected type argument

error[E0191]: the value of the associated types `A` (from the trait `T`), `C` (from the trait `T`) must be specified
  --> $DIR/use-type-argument-instead-of-assoc-type.rs:6:26
   |
LL |     type A;
   |     ------- `A` defined here
LL |     type B;
LL |     type C;
   |     ------- `C` defined here
LL | }
LL |  pub struct Foo { i: Box<T<usize, usize, usize, usize, B=usize>> }
   |                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |                          |
   |                          missing associated type `A` value
   |                          missing associated type `C` value
help: if you meant to assign the missing associated type, use the name
   |
LL |  pub struct Foo { i: Box<T<usize, usize, A = usize, C = usize, B=usize>> }
   |                                          ^^^^^^^^^  ^^^^^^^^^

error: aborting due to 2 previous errors

Some errors occurred: E0107, E0191.
For more information about an error, try `rustc --explain E0107`.
